# sea-orm-test-examples

./: Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: dog.rs  lib.rs  medication.rs  owner.rs  prescription.rs  procedure.rs  symptom.rs  vaccination.rs  visit.rs  visit_prescription.rs
src/: lib.rs
