[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid", "mock", "schema-sync", "entity-registry", "with-json", "with-time", "serde_json" ] }